// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test appReducer Check Snapshot AUTH_ACTION.USER_LOGIN_FAILURE type 1`] = `
Object {
  "loggedInState": null,
}
`;

exports[`Test appReducer Check Snapshot AUTH_ACTION.USER_LOGIN_SUCCESS type 1`] = `
Object {
  "loggedInState": undefined,
}
`;

exports[`Test appReducer returns the same appReducer state on an unhandled state 1`] = `
Object {
  "loggedInState": null,
}
`;
